# es-copy-indices

./: .gitignore  Cargo.toml  LICENSE  LICENSE-server.txt  README.md
integration/: backup-routing.toml  backup.toml  copy-routing.toml  copy.toml  docker-compose.yml  restore-routing.toml  restore.toml  run.sh  seed.sh
integration/backup/: indices.json
integration/backup/pc-index/: mappings.json  metadata.json
integration/backup/pc-index/data/: 000000-20260119-234837-763050.jsonl.zst
integration/backup/test-index/: mappings.json  metadata.json  settings.json
integration/backup/test-index/data/: 000000-20260119-234837-454847.jsonl.zst
src/: audit_builder.rs  backup.rs  conf.rs  es_client.rs  main.rs  server.rs  utils.rs
src/models/: bulk.rs  index_meta.rs  mod.rs  scroll_response.rs  server_info.rs
templates/server/: config.html  index.html  job.html  jobs.html  layout.html  run.html  status.html
